# holden

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  buf.yaml
2026-07-01/: SPRINT.md  phase0-issues.md
2026-07-01-completed/: SPRINT.md  phase0-issues.md
2026-07-02/: SPRINT.md
2026-07-02-completed/: SPRINT.md
2026-07-02-docpairs/: ADR-0002-doc-pairing-binds-through-the-judge.md  SPRINT.md
2026-07-02-docpairs-completed/: SPRINT.md
2026-07-02-docpairs-completed/rulings/: 2026-07-02T092424Z-delightd-pr68.yaml
2026-07-02-docpairs-completed/standups/: 2026-07-02T1016Z-handoff.yaml
2026-07-02-docpairs/rulings/: 2026-07-02T091958Z-delightd-pr68.yaml  2026-07-02T095156Z-delightd-pr68.yaml
2026-07-02-e2e/: SPRINT.md
2026-07-02-e2e-completed/: SPRINT.md
2026-07-02-e2e-completed/rulings/: 2026-07-02T082925Z-delightd-pr65.yaml  2026-07-02T083348Z-delightd-pr65.yaml
2026-07-02-e2e/standups/: 2026-07-02T0855Z-operator-review.yaml
2026-07-02-judge/: SPRINT.md
2026-07-02-judge-completed/: SPRINT.md
2026-07-02-judge-completed/rulings/: 2026-07-02T074856Z-magpie-pr22.yaml
2026-07-02-judge-completed/standups/: 2026-07-02T0734Z-harness-wired.yaml  2026-07-02T0802Z-first-ruling-cycle.yaml
2026-07-02-judge/rulings/: 2026-07-02T074505Z-magpie-pr22.yaml  2026-07-02T075514Z-magpie-pr22.yaml  2026-07-02T080135Z-magpie-pr22.yaml
2026-07-02-judge/standups/: 2026-07-02T0714Z-schema-core.yaml  2026-07-02T0727Z-input-assembly.yaml
2026-07-02-judgelaw/: SPRINT.md
2026-07-02-pilot/: SPRINT.md
2026-07-02-pilot-completed/: SPRINT.md
2026-07-02-pm/: ADR-0001-coding-process-gates.md  SPRINT.md
2026-07-02-pm-completed/: ADR-0001-coding-process-gates.md  SPRINT.md
docs/: ADR-0003-holden-is-a-service.md
proto/holden/ruling/v1/: ruling.proto
src/: assemble.rs  core.rs  lane.rs  lib.rs  main.rs  publish.rs  ruling.rs  spawn.rs  wire.rs
tools/judge/: Cargo.toml
tools/judge/src/: assemble.rs  publish.rs  ruling.rs
