[package]
name = "judge"
version = "0.1.0"
edition = "2021"
description = "ADR-0001 judgment-gate harness: assembles inputs, spawns a fresh judge, refuses off-spec rulings, writes the ledger, posts the commit status."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
# a gate binary should be boring and reproducible; nothing here is hot-path
opt-level = 1
